# myfin-app-back/src/main/java/org/psi/myfinappbackapp/dto/MarketDTODetailPercentage.java
@@ -1,0 +1,5 @@
+package org.psi.myfinappbackapp.dto;
+
+public record MarketDTODetailPercentage(Integer year, Integer month, double percentage) {
+
+}
