# myfin-app-back/src/main/java/org/psi/myfinappbackapp/util/AccountType.java
@@ -9,7 +9,9 @@ public enum AccountType {
 	CTO("CTO"),
 	PEA("PEA"),
 	PEAPME("PEA-PME"),
-	ASSURVIE("ASSRANCE VIE"),
+	ASSURVIE("ASSURANCE VIE"),
+	ASSURVIEPOSTE("ASSURANCE VIE POSTE"),
+	ASSURVIEMUTA("ASSURANCE VIE MUTAVIE"),
 	EPARGNESALARIALE("EPARGNE SALARIALE"),
 	LIVRETA("LIVRET A"),
 	LLD("LLD"),
